--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
   },
-  "homepage": "https://nomadcoders.github.io/react-masterclass"
+  "homepage": "https://whljm1003.github.io/ToDoList_recoil"
 }
